--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=9000
 server.servlet.context-path=/StationSki
+
+logging.file.path=C:\Users\MohamedAmin.Barkouti\Desktop\Esprit\Archi. SI II (Spring)\TP\Esprit-SpringBoot-Project\logs
+logging.level.tn.esprit.springproject.Services=info
